--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,35 @@
 @tailwind base;
+@layer base {
+    div {
+        @apply box-border;
+    }
+
+    h1 {
+        @apply text-2xl font-semibold leading-tight;
+    }
+    h4 {
+        @apply text-lg font-semibold;
+    }
+}
+
 @tailwind components;
+@layer components {
+    .icon-github {
+        @apply bg-github bg-contain;
+    }
+    .icon-fingerprint {
+        @apply bg-fingerprint bg-contain;
+    }
+    .input-simple {
+        @apply w-full text-sm border border-gray-500 p-2 rounded-sm;
+    }
+}
+
 @tailwind utilities;
 
-body {
+/* body {
     margin: 0;
+    padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
         "Helvetica Neue", sans-serif;
@@ -11,7 +37,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
-}
+} */
