--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
         @apply bg-truck bg-contain;
     }
     .input-simple {
-        @apply w-full text-sm border border-gray-500 p-2 rounded-sm;
+        @apply w-full text-sm text-center border border-gray-500 p-2 rounded-md;
     }
 }
 
