--- a/src/index.css
+++ b/src/index.css
@@ -23,24 +23,8 @@
         @apply w-full  flex flex-col gap-8 justify-center p-10;
     }
     .input-simple {
-        @apply w-full text-sm text-center border border-gray-500 p-2 rounded-md;
+        @apply w-full text-sm text-center p-2 border border-gray-500  rounded-md;
     }
 }
 
 @tailwind utilities;
-
-/* body {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-        "Helvetica Neue", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-        monospace;
-} */
